# AgenticSimulator

./: benchmark.py  config.py  program.md  pyproject.toml  run.py
analysis/: plot_efficiency.py
baselines/: bo_botorch.py  bo_optuna.py  optuna_baseline.py  random_search.py
config/: prior_bounds.yaml  prior_bounds_mpgadget.yaml
config/anvil_build/: Options.mk.anvil
judge/: chi2.py  oracle.py
orchestrator/: benchmark.py  harvest.py  run_agent.py
orchestrator/templates/: agent_claude_mpgadget.md  agent_claude_syren_new.md
scripts/: benchmark.py  continue_benchmark.py  run.py  run_mpgadget.py  run_optuna_baseline.py  validate_mpgadget.py  validate_shim.py
simulator/: mpgadget_paramfile.py  mpgadget_powerspectrum.py  mpgadget_wrapper.py  slurm.py  syren_ansatz.py  syren_wrapper.py
tests/: conftest.py  test_baselines.py  test_config_mpgadget.py  test_mpgadget_paramfile.py  test_mpgadget_powerspectrum.py  test_mpgadget_tools.py  test_mpgadget_wrapper.py  test_optuna_baseline.py  test_oracle.py  test_oracle_mpgadget.py  test_orchestrator.py  test_simulator_tool.py  test_slurm.py  test_syren_ansatz.py
tools/: compute_chi2.py  get_pk.py  get_pk_ansatz.py  run_mpgadget_trial.py
