[project]
name = "agentic-simulator"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pyyaml",
    "optuna",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["judge", "simulator", "tools", "orchestrator", "baselines"]
